memodump/css/moinizer.css
/*
 * CSS for memodump theme for MoinMoin 1.9.x
 * Copyright 2014 dossist.
 * Based on common.css and screen.css from modernized theme, and css from Bootstrap.
 */

/*=========================================================
   page frames
===========================================================*/

/* content area bottom padder */
#pagebottom {
	clear: both;
}
/* pageinfo */
.info {
    float: right;
    font-size: 0.8em;
    color: #999;
}
#pageinfo {
    margin-bottom: 20px;
}

/*=========================================================
   general margins
===========================================================*/

#content dd {
	margin-left: 20px;
}
#sidebar li p,
#content li p,
#content dd p,
#content td p {
    padding: 0;
    margin: 0;
}

/*=========================================================
   alert styles
===========================================================*/

.alert table,
.alert tbody,
.alert tr,
.alert td {
	border: none;
}

/*=========================================================
   text decorations etc
===========================================================*/

/* custom rules ----- to ---------- */
.hr1 {border-top-width: 2pt;}
.hr2 {border-top-width: 3pt;}
.hr3 {border-top-width: 4pt;}
.hr4 {border-top-width: 5pt;}
.hr5 {border-top-width: 6pt;}
.hr6 {border-top-width: 7pt;}
/* text decorations */
.u {
	text-decoration: underline;
}
.strike {
	text-decoration: line-through;
}
/* used in SpellCheck results */
strong.highlight {
    background-color: #cBe6fd;
    padding: 1pt;
}
/* colored texts (low css priority) */
.warning {
    color: #a94442; /* Bootstrap .alert-danger */
}
.error {
    color: #a94442;
}

/*=========================================================
   link anchors
===========================================================*/

#content a.nonexistent:visited,
#content a.nonexistent,
#content a.badinterwiki:visited,
#content a.badinterwiki {
	color: #999;
}

/* link type icons (would revisit later to replace with icon fonts) */
#content a[class]:before {
	margin: 0 0.2em;
}
#content a.www:before {
	content: url(../img/moin-www.png);
}
#content a.http:before {
	content: url(../img/moin-www.png);
}
#content a.https:before {
	content: url(../img/moin-www.png);
}
#content a.file:before {
	content: url(../img/moin-ftp.png);
}
#content a.ftp:before {
	content: url(../img/moin-ftp.png);
}
#content a.nntp:before {
	content: url(../img/moin-news.png)
}
#content a.news:before {
	content: url(../img/moin-news.png);
}
#content a.telnet:before, #content a.ssh:before {
	content: url(../img/moin-telnet.png);
}
#content a.irc:before, #content a.ircs:before {
	content: url(../img/moin-telnet.png);
}
#content a.mailto:before {
	content: url(../img/moin-email.png);
}
#content a.attachment:before {
	content: url(../img/moin-attach.png);
}
#content a.badinterwiki:before {
	content: url(../img/moin-inter.png);
}
#content a.interwiki:before {
	content: url(../img/moin-inter.png);
}
#content a.action:before {
	content: url(../img/moin-action.png);
}

/*=========================================================
   div styles
===========================================================*/

/* color boxes */
.comment,
.red, .green, .blue, .yellow, .orange,
.solid, .dashed, .dotted {
	/* taken from Bootstrap .well, but background-color */
    min-height: 20px;
    padding: 19px 0;
    margin-bottom: 20px;
    border: 0;
    border-color: #e3e3e3;
}
.comment > *:last-child,
.red > *:last-child, .green > *:last-child, .blue > *:last-child,
.yellow > *:last-child, .orange > *:last-child,
.solid > *:last-child, .dashed > *:last-child, .dotted > *:last-child {
	margin-bottom: 0;
}
.comment > div:last-child > table,
.red > div:last-child > table, .green > div:last-child > table, .blue > div:last-child > table,
.yellow > div:last-child > table, .orange > div:last-child > table,
.solid > div:last-child > table, .dashed > div:last-child > table, .dotted > div:last-child > table {
    /* MoinMoin wraps table with div, thus we have to cancel table margin inside the last div */
    margin-bottom: 0;
}
/* box colors */
.comment { /* .comment must be on top of other color box classes */
	color: #999;
	background-color: #f0f0ff;
}
.red { /* Bootstrap .alert-danger */
    background-color: #f2dede;
    border-color: #ebccd1;
}
.green { /* Bootstrap .alert-success */
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.blue { /* Bootstrap .alert-info */
    background-color: #d9edf7;
    border-color: #bce8f1;
}
.yellow { /* Bootstrap .alert-warning */
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.orange {
	background-color: #fdf2e3;
	border-color: #fae2c4;
}
/* box borders */
.solid, .dashed, .dotted {
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
	border-width: 2px;
	border-color: #777;
}
.solid {
	border-style: solid;
}
.dashed {
	border-style: dashed;
}
.dotted {
	border-style: dotted;
}
/* text align */
.left {
	text-align: left;
}
.center {
	text-align: center;
}
.right {
	text-align: right;
}
.justify {
	text-align: justify;
}

/*=========================================================
   TableOfContents
===========================================================*/

#pagebox div.table-of-contents {
    font-size: 88%;
    text-align: left;
    margin: 0.5em 0 0.5em 1em;
    max-width: 50%;
    display: table;
    /* Bootstrap .well and .well-sm */
    min-height: 20px;
    padding: 9px;
    margin-bottom: 20px;
    background-color: #f5f5f5;
    border: 1px solid #e3e3e3;
    border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
}
#pagebox div.table-of-contents ol {
    margin: 0;
    padding: 0 0 0 2em;
}
#pagebox div.table-of-contents ul {
    margin: 0;
    list-style: none;
}
#pagebox div.table-of-contents li {
    margin: 0;
    padding: 0;
}
/* ... */

